--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ title                    : "Doug Taliaferro"
 title_separator          : "-"
 name                     : "Doug Taliaferro"
 description              : "Doug is an IT pro and technologist focusing on VMware technologies, virtualization, Powershell, PowerCLI, automation and IT infrastructure."
-url                      : "http://taliaferro.org" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : "https://doogleit.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
