--- a/_config.yml
+++ b/_config.yml
@@ -181,7 +181,7 @@ sass:
 
 
 # Outputting
-#permalink: /:categories/:title/
+permalink: /:year/:month/:title/
 paginate: 8 # amount of posts to show
 paginate_path: /page:num/
 timezone: "America/New_York" # https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
